test/files/neg/t1422.scala
case class A(private[this] val foo:String)
