test/files/neg/t1422.check
t1422.scala:1: error: private[this] not allowed for case class parameters
case class A(private[this] val foo:String)
                               ^
one error found
